java/java-tests/testData/ig/com/siyeh/igtest/bitwise/negative_int/afterConvert.java
// "Convert to long constant (preserves semantics)" "true-preview"
class X {
  long x = 0xffff_ffff_ffff_0000L;
}